<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="512dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/glv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="199dp" />

    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom_apellidos"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/etNombre"
        app:layout_constraintEnd_toStartOf="@+id/glv"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/em_dir"
        android:textColor="@color/red"
        app:layout_constraintBottom_toTopOf="@+id/etEmail"
        app:layout_constraintEnd_toStartOf="@+id/glv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/rgOpciones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glv"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/estudios"
        android:textColor="@color/green"
        app:layout_constraintBottom_toTopOf="@+id/cbESO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintStart_toStartOf="@+id/glv" />

    <CheckBox
        android:id="@+id/cbESO"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="ESO"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/cbFPGM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/glv" />

    <CheckBox
        android:id="@+id/cbFPGM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="FP Grado Medio"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/cbFPGS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/glv" />

    <CheckBox
        android:id="@+id/cbFPGS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="FP Grado Superior"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/glh"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.015"
        app:layout_constraintStart_toStartOf="@+id/glv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/yellow"
        android:text="@string/borrar"
        android:textColor="@color/red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/glv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/glh" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/purple_700"
        android:text="@string/enviar"
        android:textColor="@color/green"
        android:backgroundTint="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/glv"
        app:layout_constraintTop_toTopOf="@+id/glh" />

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginBottom="64dp"
        android:inputType="textPersonName"
        android:text="@string/nombre"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/etApellidos"
        app:layout_constraintEnd_toStartOf="@+id/glv"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:inputType="textPersonName"
        android:text="@string/apellidos"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tv2"
        app:layout_constraintEnd_toStartOf="@+id/glv"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginBottom="40dp"
        android:inputType="textPersonName"
        android:text="@string/email"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/etDireccion"
        app:layout_constraintEnd_toStartOf="@+id/glv"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etDireccion"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:inputType="textPersonName"
        android:text="@string/direccion"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/glh"
        app:layout_constraintEnd_toStartOf="@+id/glv"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:id="@+id/rgOpciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/tv4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/glv">

        <RadioButton
            android:id="@+id/rbHombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hombre"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/rbMujer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mujer"
            android:textColor="#FFFFFF" />

        <RadioButton
            android:id="@+id/rbNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="#FFFFFF" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>